--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,40 @@
-<h1>This is our marvellous index!!</h1>
+{% extends "base.html" %}
+{% block title %}Team B{% endblock %}
+
+{% block head %}
+<style>
+    h1 {
+        color: darkslateblue;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    img {
+        border-radius: 8px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        padding: 5px;
+        width: 600px;
+        max-width: 100%;
+        height: auto;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+<h1>Welcome to Team B's Wiki Page!!</h1>
+<p>Hi all! Happy to see you visit our webpage ;)</p>
+<a href="/showprofiles">
+    <img src="{{url_for('static', filename='image/TeamB.jpeg')}}" alt="TeamB">
+</a>
+<p>Learn more about us by checking our profiles!</p>
+{% endblock %}
