--- a/static/main.css
+++ b/static/main.css
@@ -28,6 +28,40 @@
     margin-top: 7px;
 }
 
-h1{
+.create-profile {
     color: blue;
+}
+
+
+.title {
+    color: darkslateblue;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.learn-more {
+    text-align: center;
+    font-size: 20px;
+}
+
+.team {
+    border-radius: 8px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: 5px;
+    width: 600px;
+    max-width: 100%;
+    height: auto;
+}
+
+.title1 {
+    color: darkslateblue;
+}
+
+.name {
+    color: #c5773b;
 }
