HTML fix in accordance with CSS

--- a/templates/showProfiles.html
+++ b/templates/showProfiles.html
@@ -9,7 +9,7 @@
 {% block content %}
 <br>
 <div class="show-all" style="margin-top: 20px;">
-    <h1 style="display:inline; color: darkslateblue;">All Profiles</h1>
+    <h1 class = 'title1' style="display:inline;">All Profiles</h1>
     <a style="display:inline" class="btn btn-success float-right" href="/addprofile" >New Profile</a>
 </div>
     <hr>
