--- a/templates/addProfile.html
+++ b/templates/addProfile.html
@@ -11,7 +11,7 @@
 <div class="container-form">
     <form id="profile-form" action="/addprofile" method="POST">
         <div class="container-form-sub">
-            <h1>Create your profile!</h1>
+            <h1 class = 'create-profile'>Create your profile!</h1>
             <input type="text" class="form-control" placeholder="Name"
                 name="name" required>
             <input type="text" class="form-control" placeholder="Surname"
@@ -28,6 +28,7 @@
 </div>
 </form>
 </div>
+
 
 <script>
 
