JS file fix, server.py adjustment, base footer adjustment, HTML JS moved to .js file

--- a/templates/showProfiles.html
+++ b/templates/showProfiles.html
@@ -19,6 +19,6 @@
 
     </div>
 
-    <script src="{{url_for('static', filename='app.js')}}"></script>
+    <script src="{{url_for('static', filename='showProfiles.js')}}"></script>
 
 {% endblock %}
