--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block content %}
-<h1 class = 'title'>Welcome to Team B's Wiki Page!!</h1>
+<h1 class = 'title'>Welcome to the Wiki Page!!</h1>
 <p class = 'learn-more'>Hi all! Happy to see you visit our webpage ;)</p>
 <a href="/showprofiles">
     <img class = 'team' src="{{url_for('static', filename='image/TeamB.jpeg')}}" alt="TeamB">
 </a>
-<p class = 'learn-more'>Learn more about us by checking our profiles!</p>
+<p class = 'learn-more'>Learn more about the team by checking our profiles!</p>
 {% endblock %}
